--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 		<version>2.3.4.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>edu.naveennvrgup</groupId>
+	<artifactId>rest-with-spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>rest-with-spring</description>
